fixed spacing in some panels

--- a/myapp/public/stylesheets/profile.css
+++ b/myapp/public/stylesheets/profile.css
@@ -197,7 +197,7 @@ label{
         margin: 0 auto 20px auto !important;
     }
 
-    .profileSection{ width: 90%; }
+    .profileSection{ width: 100%; }
 
     .profileSection .profileList{ width: 90%; padding: 30px 0px 20px 0px;}
 }
